2005-10-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4038: Unbreak the SYSVIPC check for cross builds. (Detlef Vollman)

2005-10-04  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am:
	Add miext/cw to the module loader include path so that misym.c can export
	miDisableCompositeWrapper.

2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: Add missing ]	 (Dawid Gajownik)
	* hw/xfree86/Makefile.am (SUBDIRS): Add getconfig (Dawid Gajownik)

2005-10-02  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/exa/Makefile.am:
	Fix include path for commit of bug #4616.

2005-09-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	Add kbd_mode build system

2005-09-27  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* XpConfig/C/print/Makefile.am:
	* XpConfig/C/print/attributes/Makefile.am:
	* XpConfig/C/print/ddx-config/raster/Makefile.am:
	* XpConfig/C/print/models/CANONBJ10E-GS/Makefile.am:
	* XpConfig/C/print/models/CANONC3200-PS/Makefile.am:
	* XpConfig/C/print/models/GSdefault/Makefile.am:
	* XpConfig/C/print/models/HPLJ4050-PS/Makefile.am:
	* XpConfig/C/print/models/HPLJ4family/Makefile.am:
	* XpConfig/C/print/models/HPLJ4family/fonts/Makefile.am:
	* XpConfig/C/print/models/PS2PDFspooldir-GS/Makefile.am:
	* XpConfig/C/print/models/PSdefault/Makefile.am:
	* XpConfig/C/print/models/PSdefault/fonts/Makefile.am:
	* XpConfig/C/print/models/PSspooldir/Makefile.am:
	* XpConfig/C/print/models/SPSPARC2/Makefile.am:
	* XpConfig/en_US/print/attributes/Makefile.am:
	* hw/xfree86/dummylib/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	Fix distcheck build and install errors.

2005-09-27  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/dmx/doc/Makefile.am:
	* hw/xfree86/doc/sgml/Makefile.am:
	Fix make dist to include only sgml files.
